Update Bayesian Optimization ResNet.ipynb

--- a/Bayesian Optimization ResNet.ipynb
+++ b/Bayesian Optimization ResNet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b0999021",
+   "id": "e024ef58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70257f20",
+   "id": "30fe3178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3f060817",
+   "id": "6bbc097f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Implement a ResNet9 whose learning rate is to be optimized\n",
-    "\n",
+    "\"\"\"\n",
+    "   Implement a ResNet9 whose learning rate is to be optimized\n",
+    "   \n",
+    "\"\"\"\n",
     "class ResBlock(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels, downsample=False):\n",
     "        super(ResBlock, self).__init__()\n",
@@ -148,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4480a964",
+   "id": "1428bf8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,6 @@
     "\n",
     "    fig, ax1 = plt.subplots(figsize=(10, 3))\n",
     "\n",
-    "    # Plot observations and predicted mean with confidence interval\n",
     "    observations = ax1.scatter(learning_rates, lr_eval, marker='o',\n",
     "                               color='navy', label='Observations')\n",
     "    pred_mean = ax1.plot(test_inputs, mean, color='navy',\n",
@@ -180,24 +181,20 @@
     "                                           color='lightskyblue', alpha=0.4,\n",
     "                                           label='95% Confidence Interval')\n",
     "\n",
-    "    # Set up secondary y-axis for expected improvement\n",
     "    ax2 = ax1.twinx()\n",
     "    acq_func_eval = np.array([expected_improvement(x.reshape(1, -1), lr_eval)\n",
     "                              for x in test_inputs])\n",
     "    ax2.plot(test_inputs, acq_func_eval, color='red', linestyle='dashed',\n",
     "             label='Acquisition Function')\n",
     "\n",
-    "    # Set appropriate y-axis ticks for expected improvement\n",
     "    ymin = np.min(acq_func_eval)\n",
     "    ymax = np.max(acq_func_eval)\n",
     "    ax2.set_ylim(ymin, ymax)\n",
     "\n",
-    "    # Set labels and combined legend\n",
     "    ax1.set_xlabel('Learning Rates')\n",
     "    ax1.set_ylabel('Observations /\\n Predicted Mean of Accuracy')\n",
     "    ax2.set_ylabel('Expected Improvement')\n",
     "\n",
-    "    # Combine legends for both axes and position it outside on the right side\n",
     "    lines = [observations, *pred_mean, confidence_interval, *ax2.get_lines()]\n",
     "    labels = [line.get_label() for line in lines]\n",
     "    ax1.legend(lines, labels, loc='upper left', bbox_to_anchor=(1.2, 1),\n",
@@ -209,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8da3af34",
+   "id": "3d3e6185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +217,7 @@
     "kernel = Matern(nu=2.5)\n",
     "gp = GaussianProcessRegressor(kernel=kernel)\n",
     "\n",
-    "function_optimizations = 10 # Bayes' Optimization is performed ten times.\n",
+    "function_optimizations = 10 #\n",
     "epochs = 1 # The NN is only trained for one epoch to reduce computational time.\n",
     "lr_bounds = [0.0001, 0.01]\n",
     "\n",
@@ -231,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1600d3bb",
+   "id": "c0201f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f4c1e7ef",
+   "id": "d0bfec0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "970376e8",
+   "id": "65b328b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3f5a0b11",
+   "id": "d64ed723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b412491d",
+   "id": "5ea20f85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0d40f8d5",
+   "id": "6ad240ac",
    "metadata": {
     "scrolled": true
    },
@@ -410,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9ac18285",
+   "id": "f2fce910",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8112ea50",
+   "id": "2e1a28e9",
    "metadata": {
     "scrolled": false
    },
@@ -469,7 +466,6 @@
    ],
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
-    "# Perform Bayes' Optimization for ten iterations.\n",
     "learning_rates, lr_eval, best_acq_value = bayes_optimization(learning_rates,\n",
     "                                                             lr_eval)"
    ]
@@ -477,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "118b84dd",
+   "id": "7e5cdf34",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +578,6 @@
     }
    ],
    "source": [
-    "# Display the resulting plots.\n",
     "for i in range(function_optimizations):\n",
     "    display(Image(filename=f'bo_plot_{i}.png'))"
    ]
